# CSCE649-Physically_Based_Modelling

./: README.md  Read
1 hw/: RQ_Hw1.cpp  a.out  ball.cpp  ball.h
2 hw/: CMakeLists.txt  instructions
2 hw/src/: CMakeLists.txt  ball.cpp  ball.h  ballgen.cpp  ballgen.h  game.h  main.cpp  physicsgen.cpp  physicsgen.h
2 hw/test/: CMakeLists.txt
3 hw/: instructions
4 hw/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mesh
5 hw/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
